# risc0-rust-starter

methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
starter/: Cargo.toml
starter/src/: main.rs
