[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = "0.10"
risc0-zkvm-serde = "0.10"

[dependencies]
serde = { version = "1.0", default-features = false }
risc0-zkvm-core = { version = "0.10", default-features = false, features = ["pure"] }

[package.metadata.risc0]
methods = ["guest"]
