[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.10"

[dependencies]
#methods = { path = "../" }
risc0-zkvm-guest = "0.10"
risc0-zkvm-core = { version = "0.10", default-features = false, features = ["pure"] }

serde = { version = "1.0", default-features = false }